k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: great-void-battle
  labels:
    name: great-void-battle
